// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expo.config.preview runs for introspect 1`] = `
"{
  \\"name\\": \\"preview\\",
  \\"slug\\": \\"preview\\",
  \\"description\\": \\"This fixture was created for all preview related tasks\\",
  \\"version\\": \\"1.0.0\\",
  \\"orientation\\": \\"portrait\\",
  \\"icon\\": \\"./assets/icon.png\\",
  \\"userInterfaceStyle\\": \\"light\\",
  \\"splash\\": {
    \\"image\\": \\"./assets/splash.png\\",
    \\"resizeMode\\": \\"contain\\",
    \\"backgroundColor\\": \\"#ffffff\\"
  },
  \\"assetBundlePatterns\\": [
    \\"**/*\\"
  ],
  \\"ios\\": {
    \\"supportsTablet\\": true,
    \\"bundleIdentifier\\": \\"com.placeholder.appid\\",
    \\"infoPlist\\": {
      \\"CFBundleDevelopmentRegion\\": \\"$(DEVELOPMENT_LANGUAGE)\\",
      \\"CFBundleExecutable\\": \\"$(EXECUTABLE_NAME)\\",
      \\"CFBundleIdentifier\\": \\"$(PRODUCT_BUNDLE_IDENTIFIER)\\",
      \\"CFBundleName\\": \\"$(PRODUCT_NAME)\\",
      \\"CFBundlePackageType\\": \\"$(PRODUCT_BUNDLE_PACKAGE_TYPE)\\",
      \\"CFBundleInfoDictionaryVersion\\": \\"6.0\\",
      \\"CFBundleSignature\\": \\"



\\",
      \\"LSRequiresIPhoneOS\\": true,
      \\"NSAppTransportSecurity\\": {
        \\"NSAllowsArbitraryLoads\\": true,
        \\"NSExceptionDomains\\": {
          \\"localhost\\": {
            \\"NSExceptionAllowsInsecureHTTPLoads\\": true
          }
        }
      },
      \\"UILaunchStoryboardName\\": \\"SplashScreen\\",
      \\"UIRequiredDeviceCapabilities\\": [
        \\"armv7\\"
      ],
      \\"UIViewControllerBasedStatusBarAppearance\\": false,
      \\"UIStatusBarStyle\\": \\"UIStatusBarStyleDefault\\",
      \\"CADisableMinimumFrameDurationOnPhone\\": true,
      \\"CFBundleShortVersionString\\": \\"1.0.0\\",
      \\"CFBundleVersion\\": \\"1\\",
      \\"CFBundleURLTypes\\": [
        {
          \\"CFBundleURLSchemes\\": [
            \\"com.placeholder.appid\\"
          ]
        }
      ],
      \\"UISupportedInterfaceOrientations~ipad\\": [
        \\"UIInterfaceOrientationPortrait\\",
        \\"UIInterfaceOrientationPortraitUpsideDown\\",
        \\"UIInterfaceOrientationLandscapeLeft\\",
        \\"UIInterfaceOrientationLandscapeRight\\"
      ],
      \\"UIRequiresFullScreen\\": false,
      \\"UISupportedInterfaceOrientations\\": [
        \\"UIInterfaceOrientationPortrait\\",
        \\"UIInterfaceOrientationPortraitUpsideDown\\"
      ],
      \\"CFBundleDisplayName\\": \\"preview\\",
      \\"NSCameraUsageDescription\\": \\"This tests the multiple variants of defining plugins\\",
      \\"NSMicrophoneUsageDescription\\": \\"Allow $(PRODUCT_NAME) to access your microphone\\",
      \\"UIUserInterfaceStyle\\": \\"Light\\"
    },
    \\"entitlements\\": {
      \\"aps-environment\\": \\"development\\"
    }
  },
  \\"android\\": {
    \\"adaptiveIcon\\": {
      \\"foregroundImage\\": \\"./assets/adaptive-icon.png\\",
      \\"backgroundColor\\": \\"#ffffff\\"
    },
    \\"permissions\\": [
      \\"android.permission.CAMERA\\",
      \\"android.permission.RECORD_AUDIO\\",
      \\"android.permission.READ_EXTERNAL_STORAGE\\",
      \\"android.permission.WRITE_EXTERNAL_STORAGE\\",
      \\"android.permission.INTERNET\\"
    ],
    \\"package\\": \\"com.placeholder.appid\\"
  },
  \\"web\\": {
    \\"favicon\\": \\"./assets/favicon.png\\"
  },
  \\"plugins\\": [
    \\"expo-system-ui\\",
    [
      \\"expo-camera\\",
      {
        \\"cameraPermission\\": \\"This tests the multiple variants of defining plugins\\"
      }
    ]
  ],
  \\"_internal\\": {
    \\"isDebug\\": false,
    \\"pluginHistory\\": {
      \\"expo-system-ui\\": {
        \\"name\\": \\"expo-system-ui\\",
        \\"version\\": \\"2.4.0\\"
      },
      \\"expo-camera\\": {
        \\"name\\": \\"expo-camera\\",
        \\"version\\": \\"13.4.2\\"
      },
      \\"react-native-maps\\": {
        \\"name\\": \\"react-native-maps\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-ads-admob\\": {
        \\"name\\": \\"expo-ads-admob\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-apple-authentication\\": {
        \\"name\\": \\"expo-apple-authentication\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-contacts\\": {
        \\"name\\": \\"expo-contacts\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-notifications\\": {
        \\"name\\": \\"expo-notifications\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-updates\\": {
        \\"name\\": \\"expo-updates\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-branch\\": {
        \\"name\\": \\"expo-branch\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-document-picker\\": {
        \\"name\\": \\"expo-document-picker\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-splash-screen\\": {
        \\"name\\": \\"expo-splash-screen\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-navigation-bar\\": {
        \\"name\\": \\"expo-navigation-bar\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-file-system\\": {
        \\"name\\": \\"expo-file-system\\",
        \\"version\\": \\"15.4.3\\"
      }
    },
    \\"autolinkedModules\\": [
      \\"expo\\",
      \\"expo-application\\",
      \\"expo-camera\\",
      \\"expo-constants\\",
      \\"expo-file-system\\",
      \\"expo-font\\",
      \\"expo-keep-awake\\",
      \\"expo-modules-core\\",
      \\"expo-system-ui\\"
    ],
    \\"modResults\\": {
      \\"android\\": {
        \\"colors\\": {
          \\"resources\\": {
            \\"color\\": [
              {
                \\"$\\": {
                  \\"name\\": \\"iconBackground\\"
                },
                \\"_\\": \\"#ffffff\\"
              },
              {
                \\"$\\": {
                  \\"name\\": \\"colorPrimary\\"
                },
                \\"_\\": \\"#023c69\\"
              },
              {
                \\"$\\": {
                  \\"name\\": \\"colorPrimaryDark\\"
                },
                \\"_\\": \\"#ffffff\\"
              },
              {
                \\"$\\": {
                  \\"name\\": \\"splashscreen_background\\"
                },
                \\"_\\": \\"#ffffff\\"
              }
            ]
          }
        },
        \\"styles\\": {
          \\"resources\\": {
            \\"$\\": {
              \\"xmlns:tools\\": \\"http://schemas.android.com/tools\\"
            },
            \\"style\\": [
              {
                \\"$\\": {
                  \\"name\\": \\"AppTheme\\",
                  \\"parent\\": \\"Theme.AppCompat.Light.NoActionBar\\"
                },
                \\"item\\": [
                  {
                    \\"$\\": {
                      \\"name\\": \\"colorPrimary\\"
                    },
                    \\"_\\": \\"@color/colorPrimary\\"
                  },
                  {
                    \\"$\\": {
                      \\"name\\": \\"colorPrimaryDark\\"
                    },
                    \\"_\\": \\"@color/colorPrimaryDark\\"
                  }
                ]
              },
              {
                \\"$\\": {
                  \\"name\\": \\"Theme.App.SplashScreen\\",
                  \\"parent\\": \\"AppTheme\\"
                },
                \\"item\\": [
                  {
                    \\"$\\": {
                      \\"name\\": \\"android:windowBackground\\"
                    },
                    \\"_\\": \\"@drawable/splashscreen\\"
                  }
                ]
              }
            ]
          }
        },
        \\"strings\\": {
          \\"resources\\": {
            \\"string\\": [
              {
                \\"$\\": {
                  \\"name\\": \\"app_name\\"
                },
                \\"_\\": \\"preview\\"
              },
              {
                \\"$\\": {
                  \\"name\\": \\"expo_splash_screen_resize_mode\\",
                  \\"translatable\\": \\"false\\"
                },
                \\"_\\": \\"contain\\"
              },
              {
                \\"$\\": {
                  \\"name\\": \\"expo_splash_screen_status_bar_translucent\\",
                  \\"translatable\\": \\"false\\"
                },
                \\"_\\": \\"false\\"
              },
              {
                \\"$\\": {
                  \\"name\\": \\"expo_system_ui_user_interface_style\\",
                  \\"translatable\\": \\"false\\"
                },
                \\"_\\": \\"light\\"
              }
            ]
          }
        },
        \\"manifest\\": {
          \\"manifest\\": {
            \\"$\\": {
              \\"xmlns:android\\": \\"http://schemas.android.com/apk/res/android\\",
              \\"package\\": \\"com.placeholder.appid\\"
            },
            \\"uses-permission\\": [
              {
                \\"$\\": {
                  \\"android:name\\": \\"android.permission.INTERNET\\"
                }
              },
              {
                \\"$\\": {
                  \\"android:name\\": \\"android.permission.SYSTEM_ALERT_WINDOW\\"
                }
              },
              {
                \\"$\\": {
                  \\"android:name\\": \\"android.permission.READ_EXTERNAL_STORAGE\\"
                }
              },
              {
                \\"$\\": {
                  \\"android:name\\": \\"android.permission.WRITE_EXTERNAL_STORAGE\\"
                }
              },
              {
                \\"$\\": {
                  \\"android:name\\": \\"android.permission.CAMERA\\"
                }
              },
              {
                \\"$\\": {
                  \\"android:name\\": \\"android.permission.RECORD_AUDIO\\"
                }
              }
            ],
            \\"queries\\": [
              {
                \\"intent\\": [
                  {
                    \\"action\\": [
                      {
                        \\"$\\": {
                          \\"android:name\\": \\"android.intent.action.VIEW\\"
                        }
                      }
                    ],
                    \\"category\\": [
                      {
                        \\"$\\": {
                          \\"android:name\\": \\"android.intent.category.BROWSABLE\\"
                        }
                      }
                    ],
                    \\"data\\": [
                      {
                        \\"$\\": {
                          \\"android:scheme\\": \\"https\\"
                        }
                      }
                    ]
                  }
                ]
              }
            ],
            \\"application\\": [
              {
                \\"$\\": {
                  \\"android:name\\": \\".MainApplication\\",
                  \\"android:label\\": \\"@string/app_name\\",
                  \\"android:icon\\": \\"@mipmap/ic_launcher\\",
                  \\"android:roundIcon\\": \\"@mipmap/ic_launcher_round\\",
                  \\"android:allowBackup\\": \\"true\\",
                  \\"android:theme\\": \\"@style/AppTheme\\",
                  \\"android:usesCleartextTraffic\\": \\"true\\"
                },
                \\"meta-data\\": [
                  {
                    \\"$\\": {
                      \\"android:name\\": \\"expo.modules.updates.EXPO_SDK_VERSION\\",
                      \\"android:value\\": \\"49.0.0\\"
                    }
                  },
                  {
                    \\"$\\": {
                      \\"android:name\\": \\"expo.modules.updates.ENABLED\\",
                      \\"android:value\\": \\"false\\"
                    }
                  },
                  {
                    \\"$\\": {
                      \\"android:name\\": \\"expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH\\",
                      \\"android:value\\": \\"ALWAYS\\"
                    }
                  },
                  {
                    \\"$\\": {
                      \\"android:name\\": \\"expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS\\",
                      \\"android:value\\": \\"0\\"
                    }
                  }
                ],
                \\"activity\\": [
                  {
                    \\"$\\": {
                      \\"android:name\\": \\".MainActivity\\",
                      \\"android:label\\": \\"@string/app_name\\",
                      \\"android:configChanges\\": \\"keyboard|keyboardHidden|orientation|screenSize|uiMode\\",
                      \\"android:launchMode\\": \\"singleTask\\",
                      \\"android:windowSoftInputMode\\": \\"adjustResize\\",
                      \\"android:theme\\": \\"@style/Theme.App.SplashScreen\\",
                      \\"android:screenOrientation\\": \\"portrait\\"
                    },
                    \\"intent-filter\\": [
                      {
                        \\"action\\": [
                          {
                            \\"$\\": {
                              \\"android:name\\": \\"android.intent.action.MAIN\\"
                            }
                          }
                        ],
                        \\"category\\": [
                          {
                            \\"$\\": {
                              \\"android:name\\": \\"android.intent.category.LAUNCHER\\"
                            }
                          }
                        ]
                      },
                      {
                        \\"action\\": [
                          {
                            \\"$\\": {
                              \\"android:name\\": \\"android.intent.action.VIEW\\"
                            }
                          }
                        ],
                        \\"category\\": [
                          {
                            \\"$\\": {
                              \\"android:name\\": \\"android.intent.category.DEFAULT\\"
                            }
                          },
                          {
                            \\"$\\": {
                              \\"android:name\\": \\"android.intent.category.BROWSABLE\\"
                            }
                          }
                        ],
                        \\"data\\": [
                          {
                            \\"$\\": {
                              \\"android:scheme\\": \\"com.placeholder.appid\\"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  {
                    \\"$\\": {
                      \\"android:name\\": \\"com.facebook.react.devsupport.DevSettingsActivity\\"
                    }
                  }
                ]
              }
            ]
          }
        },
        \\"colorsNight\\": {
          \\"resources\\": {}
        },
        \\"gradleProperties\\": [
          {
            \\"type\\": \\"property\\",
            \\"key\\": \\"hermesEnabled\\",
            \\"value\\": \\"true\\"
          }
        ]
      },
      \\"ios\\": {
        \\"infoPlist\\": {
          \\"CFBundleDevelopmentRegion\\": \\"$(DEVELOPMENT_LANGUAGE)\\",
          \\"CFBundleExecutable\\": \\"$(EXECUTABLE_NAME)\\",
          \\"CFBundleIdentifier\\": \\"$(PRODUCT_BUNDLE_IDENTIFIER)\\",
          \\"CFBundleName\\": \\"$(PRODUCT_NAME)\\",
          \\"CFBundlePackageType\\": \\"$(PRODUCT_BUNDLE_PACKAGE_TYPE)\\",
          \\"CFBundleInfoDictionaryVersion\\": \\"6.0\\",
          \\"CFBundleSignature\\": \\"



\\",
          \\"LSRequiresIPhoneOS\\": true,
          \\"NSAppTransportSecurity\\": {
            \\"NSAllowsArbitraryLoads\\": true,
            \\"NSExceptionDomains\\": {
              \\"localhost\\": {
                \\"NSExceptionAllowsInsecureHTTPLoads\\": true
              }
            }
          },
          \\"UILaunchStoryboardName\\": \\"SplashScreen\\",
          \\"UIRequiredDeviceCapabilities\\": [
            \\"armv7\\"
          ],
          \\"UIViewControllerBasedStatusBarAppearance\\": false,
          \\"UIStatusBarStyle\\": \\"UIStatusBarStyleDefault\\",
          \\"CADisableMinimumFrameDurationOnPhone\\": true,
          \\"CFBundleShortVersionString\\": \\"1.0.0\\",
          \\"CFBundleVersion\\": \\"1\\",
          \\"CFBundleURLTypes\\": [
            {
              \\"CFBundleURLSchemes\\": [
                \\"com.placeholder.appid\\"
              ]
            }
          ],
          \\"UISupportedInterfaceOrientations~ipad\\": [
            \\"UIInterfaceOrientationPortrait\\",
            \\"UIInterfaceOrientationPortraitUpsideDown\\",
            \\"UIInterfaceOrientationLandscapeLeft\\",
            \\"UIInterfaceOrientationLandscapeRight\\"
          ],
          \\"UIRequiresFullScreen\\": false,
          \\"UISupportedInterfaceOrientations\\": [
            \\"UIInterfaceOrientationPortrait\\",
            \\"UIInterfaceOrientationPortraitUpsideDown\\"
          ],
          \\"CFBundleDisplayName\\": \\"preview\\",
          \\"NSCameraUsageDescription\\": \\"This tests the multiple variants of defining plugins\\",
          \\"NSMicrophoneUsageDescription\\": \\"Allow $(PRODUCT_NAME) to access your microphone\\",
          \\"UIUserInterfaceStyle\\": \\"Light\\"
        },
        \\"entitlements\\": {
          \\"aps-environment\\": \\"development\\"
        },
        \\"expoPlist\\": {
          \\"EXUpdatesEnabled\\": false,
          \\"EXUpdatesCheckOnLaunch\\": \\"ALWAYS\\",
          \\"EXUpdatesLaunchWaitMs\\": 0,
          \\"EXUpdatesSDKVersion\\": \\"49.0.0\\"
        },
        \\"splashScreenStoryboard\\": {
          \\"document\\": {
            \\"$\\": {
              \\"type\\": \\"com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB\\",
              \\"version\\": \\"3.0\\",
              \\"toolsVersion\\": \\"16096\\",
              \\"targetRuntime\\": \\"iOS.CocoaTouch\\",
              \\"propertyAccessControl\\": \\"none\\",
              \\"useAutolayout\\": \\"YES\\",
              \\"launchScreen\\": \\"YES\\",
              \\"useTraitCollections\\": \\"YES\\",
              \\"useSafeAreas\\": \\"YES\\",
              \\"colorMatched\\": \\"YES\\",
              \\"initialViewController\\": \\"EXPO-VIEWCONTROLLER-1\\"
            },
            \\"dependencies\\": [
              {
                \\"deployment\\": [
                  {
                    \\"$\\": {
                      \\"identifier\\": \\"iOS\\"
                    }
                  }
                ],
                \\"plugIn\\": [
                  {
                    \\"$\\": {
                      \\"identifier\\": \\"com.apple.InterfaceBuilder.IBCocoaTouchPlugin\\",
                      \\"version\\": \\"16087\\"
                    }
                  }
                ],
                \\"capability\\": [
                  {
                    \\"$\\": {
                      \\"name\\": \\"Safe area layout guides\\",
                      \\"minToolsVersion\\": \\"9.0\\"
                    }
                  },
                  {
                    \\"$\\": {
                      \\"name\\": \\"documents saved in the Xcode 8 format\\",
                      \\"minToolsVersion\\": \\"8.0\\"
                    }
                  }
                ]
              }
            ],
            \\"scenes\\": [
              {
                \\"scene\\": [
                  {
                    \\"$\\": {
                      \\"sceneID\\": \\"EXPO-SCENE-1\\"
                    },
                    \\"objects\\": [
                      {
                        \\"viewController\\": [
                          {
                            \\"$\\": {
                              \\"storyboardIdentifier\\": \\"SplashScreenViewController\\",
                              \\"id\\": \\"EXPO-VIEWCONTROLLER-1\\",
                              \\"sceneMemberID\\": \\"viewController\\"
                            },
                            \\"view\\": [
                              {
                                \\"$\\": {
                                  \\"key\\": \\"view\\",
                                  \\"userInteractionEnabled\\": \\"NO\\",
                                  \\"contentMode\\": \\"scaleToFill\\",
                                  \\"insetsLayoutMarginsFromSafeArea\\": \\"NO\\",
                                  \\"id\\": \\"EXPO-ContainerView\\",
                                  \\"userLabel\\": \\"ContainerView\\"
                                },
                                \\"rect\\": [
                                  {
                                    \\"$\\": {
                                      \\"key\\": \\"frame\\",
                                      \\"x\\": \\"0.0\\",
                                      \\"y\\": \\"0.0\\",
                                      \\"width\\": \\"414\\",
                                      \\"height\\": \\"736\\"
                                    }
                                  }
                                ],
                                \\"autoresizingMask\\": [
                                  {
                                    \\"$\\": {
                                      \\"key\\": \\"autoresizingMask\\",
                                      \\"flexibleMaxX\\": \\"YES\\",
                                      \\"flexibleMaxY\\": \\"YES\\"
                                    }
                                  }
                                ],
                                \\"subviews\\": [
                                  {
                                    \\"imageView\\": [
                                      {
                                        \\"$\\": {
                                          \\"userInteractionEnabled\\": \\"NO\\",
                                          \\"contentMode\\": \\"scaleAspectFill\\",
                                          \\"horizontalHuggingPriority\\": \\"251\\",
                                          \\"verticalHuggingPriority\\": \\"251\\",
                                          \\"insetsLayoutMarginsFromSafeArea\\": \\"NO\\",
                                          \\"image\\": \\"SplashScreenBackground\\",
                                          \\"translatesAutoresizingMaskIntoConstraints\\": \\"NO\\",
                                          \\"id\\": \\"EXPO-SplashScreenBackground\\",
                                          \\"userLabel\\": \\"SplashScreenBackground\\"
                                        },
                                        \\"rect\\": [
                                          {
                                            \\"$\\": {
                                              \\"key\\": \\"frame\\",
                                              \\"x\\": \\"0.0\\",
                                              \\"y\\": \\"0.0\\",
                                              \\"width\\": \\"414\\",
                                              \\"height\\": \\"736\\"
                                            }
                                          }
                                        ]
                                      },
                                      {
                                        \\"$\\": {
                                          \\"id\\": \\"EXPO-SplashScreen\\",
                                          \\"userLabel\\": \\"SplashScreen\\",
                                          \\"image\\": \\"SplashScreen\\",
                                          \\"contentMode\\": \\"scaleAspectFit\\",
                                          \\"horizontalHuggingPriority\\": 251,
                                          \\"verticalHuggingPriority\\": 251,
                                          \\"clipsSubviews\\": true,
                                          \\"userInteractionEnabled\\": false,
                                          \\"translatesAutoresizingMaskIntoConstraints\\": false
                                        },
                                        \\"rect\\": [
                                          {
                                            \\"$\\": {
                                              \\"key\\": \\"frame\\",
                                              \\"x\\": 0,
                                              \\"y\\": 0,
                                              \\"width\\": 414,
                                              \\"height\\": 736
                                            }
                                          }
                                        ]
                                      }
                                    ]
                                  }
                                ],
                                \\"color\\": [
                                  {
                                    \\"$\\": {
                                      \\"key\\": \\"backgroundColor\\",
                                      \\"systemColor\\": \\"systemBackgroundColor\\"
                                    }
                                  }
                                ],
                                \\"constraints\\": [
                                  {
                                    \\"constraint\\": [
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreenBackground\\",
                                          \\"firstAttribute\\": \\"top\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"top\\",
                                          \\"id\\": \\"1gX-mQ-vu6\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreenBackground\\",
                                          \\"firstAttribute\\": \\"leading\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"leading\\",
                                          \\"id\\": \\"6tX-OG-Sck\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreenBackground\\",
                                          \\"firstAttribute\\": \\"trailing\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"trailing\\",
                                          \\"id\\": \\"ABX-8g-7v4\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreenBackground\\",
                                          \\"firstAttribute\\": \\"bottom\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"bottom\\",
                                          \\"id\\": \\"jkI-2V-eW5\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreen\\",
                                          \\"firstAttribute\\": \\"top\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"top\\",
                                          \\"id\\": \\"83fcb9b545b870ba44c24f0feeb116490c499c52\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreen\\",
                                          \\"firstAttribute\\": \\"leading\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"leading\\",
                                          \\"id\\": \\"61d16215e44b98e39d0a2c74fdbfaaa22601b12c\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreen\\",
                                          \\"firstAttribute\\": \\"trailing\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"trailing\\",
                                          \\"id\\": \\"f934da460e9ab5acae3ad9987d5b676a108796c1\\"
                                        }
                                      },
                                      {
                                        \\"$\\": {
                                          \\"firstItem\\": \\"EXPO-SplashScreen\\",
                                          \\"firstAttribute\\": \\"bottom\\",
                                          \\"secondItem\\": \\"EXPO-ContainerView\\",
                                          \\"secondAttribute\\": \\"bottom\\",
                                          \\"id\\": \\"d6a0be88096b36fb132659aa90203d39139deda9\\"
                                        }
                                      }
                                    ]
                                  }
                                ],
                                \\"viewLayoutGuide\\": [
                                  {
                                    \\"$\\": {
                                      \\"key\\": \\"safeArea\\",
                                      \\"id\\": \\"EXPO-SafeArea\\"
                                    }
                                  }
                                ]
                              }
                            ]
                          }
                        ],
                        \\"placeholder\\": [
                          {
                            \\"$\\": {
                              \\"placeholderIdentifier\\": \\"IBFirstResponder\\",
                              \\"id\\": \\"EXPO-PLACEHOLDER-1\\",
                              \\"userLabel\\": \\"First Responder\\",
                              \\"sceneMemberID\\": \\"firstResponder\\"
                            }
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ],
            \\"resources\\": [
              {
                \\"image\\": [
                  {
                    \\"$\\": {
                      \\"name\\": \\"SplashScreenBackground\\",
                      \\"width\\": \\"1\\",
                      \\"height\\": \\"1\\"
                    }
                  },
                  {
                    \\"$\\": {
                      \\"name\\": \\"SplashScreen\\",
                      \\"width\\": 414,
                      \\"height\\": 736
                    }
                  }
                ]
              }
            ]
          }
        },
        \\"podfileProperties\\": {
          \\"expo.jsEngine\\": \\"hermes\\"
        }
      }
    }
  },
  \\"sdkVersion\\": \\"49.0.0\\",
  \\"platforms\\": [
    \\"ios\\",
    \\"android\\"
  ],
  \\"mods\\": {
    \\"android\\": {},
    \\"ios\\": {}
  },
  \\"androidStatusBar\\": {
    \\"backgroundColor\\": \\"#ffffff\\"
  }
}"
`;

exports[`expo.config.preview runs for prebuild 1`] = `
"{
  \\"name\\": \\"preview\\",
  \\"slug\\": \\"preview\\",
  \\"description\\": \\"This fixture was created for all preview related tasks\\",
  \\"version\\": \\"1.0.0\\",
  \\"orientation\\": \\"portrait\\",
  \\"icon\\": \\"./assets/icon.png\\",
  \\"userInterfaceStyle\\": \\"light\\",
  \\"splash\\": {
    \\"image\\": \\"./assets/splash.png\\",
    \\"resizeMode\\": \\"contain\\",
    \\"backgroundColor\\": \\"#ffffff\\"
  },
  \\"assetBundlePatterns\\": [
    \\"**/*\\"
  ],
  \\"ios\\": {
    \\"supportsTablet\\": true,
    \\"bundleIdentifier\\": \\"com.placeholder.appid\\"
  },
  \\"android\\": {
    \\"adaptiveIcon\\": {
      \\"foregroundImage\\": \\"./assets/adaptive-icon.png\\",
      \\"backgroundColor\\": \\"#ffffff\\"
    },
    \\"permissions\\": [
      \\"android.permission.CAMERA\\",
      \\"android.permission.RECORD_AUDIO\\",
      \\"android.permission.READ_EXTERNAL_STORAGE\\",
      \\"android.permission.WRITE_EXTERNAL_STORAGE\\",
      \\"android.permission.INTERNET\\"
    ],
    \\"package\\": \\"com.placeholder.appid\\"
  },
  \\"web\\": {
    \\"favicon\\": \\"./assets/favicon.png\\"
  },
  \\"plugins\\": [
    \\"expo-system-ui\\",
    [
      \\"expo-camera\\",
      {
        \\"cameraPermission\\": \\"This tests the multiple variants of defining plugins\\"
      }
    ]
  ],
  \\"_internal\\": {
    \\"isDebug\\": false,
    \\"pluginHistory\\": {
      \\"expo-system-ui\\": {
        \\"name\\": \\"expo-system-ui\\",
        \\"version\\": \\"2.4.0\\"
      },
      \\"expo-camera\\": {
        \\"name\\": \\"expo-camera\\",
        \\"version\\": \\"13.4.2\\"
      },
      \\"react-native-maps\\": {
        \\"name\\": \\"react-native-maps\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-ads-admob\\": {
        \\"name\\": \\"expo-ads-admob\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-apple-authentication\\": {
        \\"name\\": \\"expo-apple-authentication\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-contacts\\": {
        \\"name\\": \\"expo-contacts\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-notifications\\": {
        \\"name\\": \\"expo-notifications\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-updates\\": {
        \\"name\\": \\"expo-updates\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-branch\\": {
        \\"name\\": \\"expo-branch\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-document-picker\\": {
        \\"name\\": \\"expo-document-picker\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-splash-screen\\": {
        \\"name\\": \\"expo-splash-screen\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-navigation-bar\\": {
        \\"name\\": \\"expo-navigation-bar\\",
        \\"version\\": \\"UNVERSIONED\\"
      },
      \\"expo-file-system\\": {
        \\"name\\": \\"expo-file-system\\",
        \\"version\\": \\"15.4.3\\"
      }
    },
    \\"autolinkedModules\\": [
      \\"expo\\",
      \\"expo-application\\",
      \\"expo-camera\\",
      \\"expo-constants\\",
      \\"expo-file-system\\",
      \\"expo-font\\",
      \\"expo-keep-awake\\",
      \\"expo-modules-core\\",
      \\"expo-system-ui\\"
    ]
  },
  \\"sdkVersion\\": \\"49.0.0\\",
  \\"platforms\\": [
    \\"ios\\",
    \\"android\\"
  ],
  \\"mods\\": {
    \\"android\\": {},
    \\"ios\\": {}
  },
  \\"androidStatusBar\\": {
    \\"backgroundColor\\": \\"#ffffff\\"
  }
}"
`;

exports[`expo.config.preview runs for public 1`] = `
"{
  \\"name\\": \\"preview\\",
  \\"slug\\": \\"preview\\",
  \\"description\\": \\"This fixture was created for all preview related tasks\\",
  \\"version\\": \\"1.0.0\\",
  \\"orientation\\": \\"portrait\\",
  \\"icon\\": \\"./assets/icon.png\\",
  \\"userInterfaceStyle\\": \\"light\\",
  \\"splash\\": {
    \\"image\\": \\"./assets/splash.png\\",
    \\"resizeMode\\": \\"contain\\",
    \\"backgroundColor\\": \\"#ffffff\\"
  },
  \\"assetBundlePatterns\\": [
    \\"**/*\\"
  ],
  \\"ios\\": {
    \\"supportsTablet\\": true
  },
  \\"android\\": {
    \\"adaptiveIcon\\": {
      \\"foregroundImage\\": \\"./assets/adaptive-icon.png\\",
      \\"backgroundColor\\": \\"#ffffff\\"
    },
    \\"permissions\\": [
      \\"android.permission.CAMERA\\",
      \\"android.permission.RECORD_AUDIO\\"
    ]
  },
  \\"web\\": {
    \\"favicon\\": \\"./assets/favicon.png\\"
  },
  \\"plugins\\": [
    \\"expo-system-ui\\",
    [
      \\"expo-camera\\",
      {
        \\"cameraPermission\\": \\"This tests the multiple variants of defining plugins\\"
      }
    ]
  ],
  \\"sdkVersion\\": \\"49.0.0\\",
  \\"platforms\\": [
    \\"ios\\",
    \\"android\\"
  ]
}"
`;
